# flmsg

./: ChangeLog  INSTALL  README  configure.ac
data/: flics.desktop  flics.xpm  flmsg.desktop  flmsg.xpm  (+3 more)
src/: FTextView.cxx  Fl_Native_File_Chooser_WIN32.cxx  Fl_Text_Display_mod.cxx  Fl_Text_Editor_mod.cxx  Makefile.am  arl_msgs.cxx  baddata_templates.cxx  base64.cxx  blank.cxx  blank_tab.cxx  combo.cxx  date.cxx  debug.cxx  dnd_tab.cxx  fileselect.cxx  flics-rc.rc  flinput2.cxx  flmsg-rc.rc  flmsg.cxx  flmsg_dialog.cxx  flmsg_dialog.fl  flmsgres.rc  flnfc_common.cxx  hx_msgs.cxx  icons.cxx  ics203.cxx  ics203_tab.cxx  ics203_templates.cxx  ics205.cxx  ics205_tab.cxx  ics205_templates.cxx  ics205a.cxx  ics205a_tab.cxx  ics205a_templates.cxx  ics206.cxx  ics206_tab.cxx  ics206_templates.cxx  ics213.cxx  ics213_dialog.cxx  ics213_dialog.fl  (+36 more)
src/arq/: arq.cxx  flmsg-arq.cxx
src/blank-dnd/: baddata_templates.cxx  blank.cxx  blank_tab.cxx  blank_templates.cxx  dnd_tab.cxx
src/cap/: cap105.cxx  cap105_tab.cxx  cap110.cxx  cap110_tab.cxx  cap_templates.cxx
src/csv/: csv.cxx  csv_tab.cxx  csv_table.cxx  csv_templates.cxx
src/custom/: custom.cxx  custom_tab.cxx  custom_templates.cxx  custom_transfer_tab.cxx
src/ham_forms/: ham_forms_tab.cxx  netlog.cxx  netlog_tab.cxx  netlog_templates.cxx
src/hics/: hics203.cxx  hics203.html  hics203_tab.cxx  hics203_templates.cxx  hics206.cxx  hics206.html  hics206_tab.cxx  hics206_templates.cxx  hics213.cxx  hics213.html  hics213_tab.cxx  hics213_templates.cxx  hics214.cxx  hics214.html  hics214_tab.cxx  hics214_templates.cxx  hics_tab.cxx  untitled
src/html_templates/: RedCross-5739.html  RedCross-5739A.html  RedCross-5739B.html  RedCrossSafeandWell.html  blank_template.html  cap110.html  capf105.html  ics203_template.html  ics205_template.html  ics205a_template.html  ics206_template.html  ics213_templates.html  ics214_templates.html  ics216_templates.html  mars_daily.html  mars_ineei.html  mars_net.html  plaintext_template.html  radiogram_fc_template.html  radiogram_template.html
src/iaru/: iaru.cxx  iaru.html  iaru_tab.cxx  iaru_templates.cxx
src/ics/: ics203.cxx  ics203_tab.cxx  ics203_templates.cxx  ics205.cxx  ics205_tab.cxx  ics205_templates.cxx  ics205a.cxx  ics205a_tab.cxx  ics205a_templates.cxx  ics206.cxx  ics206_tab.cxx  ics206_templates.cxx  ics213.cxx  ics213_tab.cxx  ics213_templates.cxx  ics214.cxx  ics214_tab.cxx  ics214_templates.cxx  ics216.cxx  ics216_tab.cxx  ics216_templates.cxx  ics309.cxx  ics309_tab.cxx  ics309_templates.cxx  ics_tab.cxx
src/include/: FTextView.h  Fl_Text_Buffer_mod.H  Fl_Text_Buffer_mod_1_1.H  Fl_Text_Buffer_mod_1_3.H  Fl_Text_Display_mod.H  Fl_Text_Display_mod_1_1.H  Fl_Text_Display_mod_1_3.H  Fl_Text_Editor_mod.H  Fl_Text_Editor_mod_1_1.H  Fl_Text_Editor_mod_1_3.H  arl_msgs.h  arq.h  ascii.h  base128.h  base256.h  base64.h  blank.h  calendar.h  combo.h  compat-mingw.h  compat.h  config.h  crc16.h  csv.h  custom.h  date.h  debug.h  dirent-check.h  doxygen.h  drop_button.h  fileselect.h  fl_lock.h  flics_config.h  flinput2.h  flmisc.h  flmsg.h  flmsg_arq.h  flmsg_config.h  flmsg_dialog.h  flmsg_strings.h  (+28 more)
src/include/FL/: Fl_Native_File_Chooser.H  Fl_Native_File_Chooser_FLTK.H  Fl_Native_File_Chooser_MAC.H  Fl_Native_File_Chooser_WIN32.H
src/lzma/: LzFind.c  LzFind.h  LzmaDec.c  LzmaDec.h  LzmaEnc.c  LzmaEnc.h  Types.h
src/mars/: mars_army.cxx  mars_army_tab.cxx  mars_daily.cxx  mars_daily_tab.cxx  mars_ineei.cxx  mars_ineei_tab.cxx  mars_msg.cxx  mars_msg_tab.cxx  mars_navy.cxx  mars_net.cxx  mars_net_tab.cxx  mars_tab.cxx  mars_templates.cxx  navy_mars_tab.cxx
src/nhc/: hurricane.cxx  hurricane_tab.cxx  hurricane_template.cxx
src/plaintext/: plaintext.cxx  plaintext_tab.cxx  plaintext_templates.cxx
src/radiogram/: arl_msgs.cxx  hx_msgs.cxx  radiogram.cxx  radiogram_tab.cxx  radiogram_templates.cxx
src/redx/: redx_5739.cxx  redx_5739A.cxx  redx_5739A_tab.cxx  redx_5739B.cxx  redx_5739B_tab.cxx  redx_5739_tab.cxx  redx_5739_template.cxx  redx_snw.cxx  redx_snw_tab.cxx  redx_snw_template.cxx  redx_tab.cxx  redx_templates.cxx
src/transfer/: transfer.cxx  transfer_tab.cxx  transfer_templates.cxx
src/utils/: base128.cxx  base256.cxx  base64.cxx  debug.cxx  ext_string.cxx  getsysinfo.c  mingw.c  mongoose.c  parse_xml.cxx  socket.cxx  status.cxx  threads.cxx  time_table.cxx  time_table_dat.cxx  timeops.cxx  util.cxx  wrap.cxx  xml_io.cxx
src/widgets/: FTextView.cxx  Fl_Native_File_Chooser.cxx  Fl_Native_File_Chooser_FLTK.cxx  Fl_Native_File_Chooser_MAC.cxx  Fl_Native_File_Chooser_WIN32.cxx  Fl_Text_Buffer_mod.cxx  Fl_Text_Buffer_mod_1_1.cxx  Fl_Text_Buffer_mod_1_3.cxx  Fl_Text_Display_mod.cxx  Fl_Text_Display_mod_1_1.cxx  Fl_Text_Display_mod_1_3.cxx  Fl_Text_Editor_mod.cxx  Fl_Text_Editor_mod_1_1.cxx  Fl_Text_Editor_mod_1_3.cxx  calendar.cxx  combo.cxx  date.cxx  drop_button.cxx  fileselect.cxx  flinput2.cxx  flmisc.cxx  flnfc_common.cxx  flslider2.cxx  font_browser.cxx  icons.cxx  missing_strings.c  pixmaps.cxx  pixmaps_tango.cxx
src/wx/: hurricane.cxx  hurricane_tab.cxx  hurricane_template.cxx  severe_wx.cxx  severe_wx_tab.cxx  severe_wx_template.cxx  storm_report.cxx  storm_report_tab.cxx  storm_report_template.cxx  wx_strings.cxx
src/wx/fips/: FIPS-6-4.txt  ak.csv  al.csv  ar.csv  as.csv  az.csv  ca.csv  co.csv  ct.csv  de.csv  fl.csv  fm.csv  ga.csv  hi.csv  ia.csv  id.csv  il.csv  in.csv  ks.csv  ky.csv  la.csv  ma.csv  md.csv  me.csv  mh.csv  mi.csv  mn.csv  mo.csv  ms.csv  mt.csv  nc.csv  nd.csv  ne.csv  nh.csv  nj.csv  nm.csv  nv.csv  ny.csv  oh.csv  ok.csv  (+17 more)
src/xmlrpcpp/: XmlRpc.h  XmlRpcClient.cpp  XmlRpcClient.h  XmlRpcDispatch.cpp  XmlRpcDispatch.h  XmlRpcException.h  XmlRpcMutex.cpp  XmlRpcMutex.h  XmlRpcServer.cpp  XmlRpcServer.h  XmlRpcServerConnection.cpp  XmlRpcServerConnection.h  XmlRpcServerMethod.cpp  XmlRpcServerMethod.h  XmlRpcSocket.cpp  XmlRpcSocket.h  XmlRpcSource.cpp  XmlRpcSource.h  XmlRpcThread.cpp  XmlRpcThread.h  XmlRpcThreadedServer.cpp  XmlRpcThreadedServer.h  XmlRpcUtil.cpp  XmlRpcUtil.h  XmlRpcValue.cpp  XmlRpcValue.h  base64.h
(+93 files in other folders)
